# hyuabot-backend-python

./: .coveragerc  .env.example  .flake8  .gcloudignore  .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  Dockerfile  LICENSE  Procfile  README.md  app.yaml  db.sqlite3  main.py  manage.py  requirements.txt  setup.cfg
.github/workflows/: default.yml  deploy.yml  main.yml
common/: README.md  config.py
firebase/: README.md  firebase_init.py
food/: README.md  menu.py
hypercorn/: hypercorn_conf.py
hyuabot/: unused.py  url.py  views.py
hyuabot/food/: food_main.py
hyuabot/templates/: home.html
hyuabot/transport/shuttle/: date.py  shuttle.py  strings.py
hyuabot/transport/shuttle/timetable/: README.md
hyuabot/transport/shuttle/timetable/seasonal/: week.json  weekend.json
hyuabot/transport/shuttle/timetable/semester/: schoolbus.json  week.json  weekend.json
hyuabot/transport/shuttle/timetable/vacation/: week.json  weekend.json
init/: init.sql
mainline/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: start-prod.sh
src/: __init__.py  config.py  constants.py  database.py  exceptions.py  main.py  utils.py
src/app/: __init__.py  main.py
src/app/controller/query/: __init__.py  shuttle.py  subway.py
src/app/internal/: database.py  date_utils.py
src/app/model/: bus.py  cafeteria.py  campus.py  commute_shuttle.py  notice.py  reading_room.py  shuttle.py  subway.py  user.py
src/app/request/: bus.py  cafeteria.py  campus.py  commute_shuttle.py  notice.py  reading_room.py  shuttle.py  subway.py  user.py
src/building/: dependencies.py  exceptions.py  query.py  router.py  schemas.py  service.py
src/bus/: dependancies.py  exceptions.py  query.py  router.py  schemas.py  service.py
src/cafeteria/: dependancies.py  exceptions.py  query.py  router.py  schemas.py  service.py
src/calendar/: dependancies.py  exceptions.py  query.py  router.py  schemas.py  service.py
src/campus/: dependancies.py  exceptions.py  router.py  schemas.py  service.py
src/commute_shuttle/: dependancies.py  exceptions.py  router.py  schemas.py  service.py
src/contact/: dependancies.py  exceptions.py  query.py  router.py  schemas.py  service.py
src/event/: dependancies.py  query.py  router.py  schemas.py  service.py
src/model/: __init__.py  building.py  bus.py  cafeteria.py  calendar.py  campus.py  commute_shuttle.py  contact.py  notice.py  reading_room.py  shuttle.py  subway.py  user.py
src/models/: bus.py  cafeteria.py  campus.py  commute_shuttle.py  notice.py  reading_room.py  shuttle.py  subway.py  user.py
src/notice/: dependancies.py  exceptions.py  query.py  router.py  schemas.py  service.py
src/query/: query.py  router.py
src/reading_room/: dependancies.py  exceptions.py  query.py  router.py  schemas.py  service.py
src/shuttle/: dependancies.py  exceptions.py  query.py  router.py  schemas.py  service.py
src/subway/: dependancies.py  exceptions.py  query.py  router.py  schemas.py  service.py
src/user/: config.py  dependancies.py  exceptions.py  jwt.py  router.py  schemas.py  security.py  service.py  utils.py
tests/: conftest.py  test_auth_routes.py  test_building_query.py  test_building_routes.py  test_bus_query.py  test_bus_routes.py  test_cafeteria_query.py  test_cafeteria_routes.py  test_calendar_query.py  test_calendar_routes.py  test_campus_routes.py  test_commute_shuttle_routes.py  test_contact_query.py  test_contact_routes.py  test_notice_query.py  test_notice_routes.py  test_reading_room_query.py  test_reading_room_routes.py  test_shuttle_query.py  test_shuttle_routes.py  test_subway_query.py  test_subway_routes.py  utils.py
tests/auth/: test_routes.py
transport/: README.md  date.py
transport/bus/: get_arrival_info.py
transport/shuttle/: date.py  get_info.py
transport/subway/: get_info.py
web/: url.py  views.py
web/templates/web/: map.html
