[metadata]
name = hyuabot-backend-python
version = 2024.1.1
description = HYUabot Backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jil8885/hyuabot-backend-python
author = Jeongin Lee
author_email = jil8885@hanyang.ac.kr
license = GPLv3
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.12
project_urls =
    Source = https://github.com/jil8885/hyuabot-backend-python
    Tracker = https://github.com/jil8885/hyuabot-backend-python/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.11
setup_requires =
    setuptools>=68.2.2
    wheel>=0.41.3
install_requires =
    SQLAlchemy>=2.0.23
    asyncpg>=0.29.0
    fastapi>=0.104.1
    hypercorn>=0.15.0
    redis>=5.1.0a1
    pydantic[email]>=2.5.2
    pydantic-settings>=2.1.0
    python-jose>=3.3.0
    greenlet>=3.0.1
    pytz>=2023.3.post1
    python-multipart>=0.0.6
    bcrypt>=4.0.1
    strawberry-graphql>=0.217.1
zip_safe = false
include_package_data = true

[options.extras_require]
dev =
lint =
    flake8>=6.1.0
    black>=23.11.0
typecheck =
    mypy>=1.7.0
    sqlalchemy[mypy]>=2.0.23
    types-pytz>=2023.3.1.1
test =
    pytest>=7.4.3
    pytest-cov>=4.1.0
    pytest-asyncio>=0.21.1
    async-asgi-testclient>=1.4.11
[mypy]
plugins = sqlalchemy.ext.mypy.plugin,pydantic.mypy
ignore_missing_imports = true
mypy_path = src
namespace_packages = true
explicit_package_bases = true

[options.packages.find]
where = src
include = *

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W503,W504,N801,N802
max-line-length = 120
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning:aioredis.*:

[yapf]
based_on_style = facebook
spaces_before_comment = 2
column_limit = 120
blank_line_before_nested_class_or_def = true
