[metadata]
name = hyuabot-backend-python
version = 2024.04.01
description = HYUabot Backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jil8885/hyuabot-backend-python
author = Jeongin Lee
author_email = jil8885@hanyang.ac.kr
license = GPLv3
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.13
project_urls =
    Source = https://github.com/jil8885/hyuabot-backend-python
    Tracker = https://github.com/jil8885/hyuabot-backend-python/issues

[options]
package_dir =
    = src
packages = find_namespace:
python_requires = >=3.13
setup_requires =
    setuptools>=68.2.2
    wheel>=0.41.3
install_requires =
    SQLAlchemy>=2.0.29
    asyncpg>=0.29.0
    fastapi>=0.110.0
    uvicorn>=0.29.0
    redis>=5.1.0b4
    pydantic[email]>=2.6.4
    pydantic-settings>=2.2.1
    python-jose>=3.3.0
    greenlet>=3.0.3
    pytz>=2024.1
    python-multipart>=0.0.9
    bcrypt>=4.1.2
    strawberry-graphql>=0.224.1
    korean_lunar_calendar>=0.3.1
    aiohttp>=3.9.3
    holidays>=0.45
zip_safe = false
include_package_data = true

[options.extras_require]
dev =
lint =
    flake8>=7.0.0
    black>=24.3.0
    autoflake>=2.3.1
typecheck =
    mypy>=1.9.0
    sqlalchemy[mypy]>=2.0.29
    types-pytz>=2024.1.0.20240203
test =
    pytest>=8.1.1
    pytest-cov>=5.0.0
    pytest-asyncio>=0.23.6
    async-asgi-testclient>=1.4.11
[mypy]
plugins = sqlalchemy.ext.mypy.plugin,pydantic.mypy
ignore_missing_imports = true
mypy_path = src
namespace_packages = true
explicit_package_bases = true

[options.packages.find]
where = src
include = *

[flake8]
# ref: http://pep8.readthedocs.io/en/latest/intro.html#error-codes
ignore = E126,E127,E129,E221,E241,E722,E731,E401,W503,W504,N801,N802
max-line-length = 120
builtins = _
exclude = .git,.cache,.idea,.egg,__pycache__,venv,build,docs,alembic

[tool:pytest]
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning:aioredis.*:

[yapf]
based_on_style = facebook
spaces_before_comment = 2
column_limit = 120
blank_line_before_nested_class_or_def = true
